@@ -1,3 +1,7 @@
+2011-11-07 Magnus Hagdorn
+ * m4macros/netcdf.m4: the netCDF4 package of SL6 stores the module files in
+   a new location so we need to look for them in various places
+
 2011-10-04 Magnus Hagdorn
  * PyGC/PyGC/IO/GC_profile.py: deal with litho temperature profiles
 
